--- a/index.html
+++ b/index.html
@@ -499,6 +499,7 @@
   <script src="./static/js/jquery-3.3.1.js"></script>
   <script src="./static/js/popper.min.js"></script>
   <script src="./static/js/bootstrap.bundle.js"></script>
+  <script src="./static/js/jquery.easing.min.js"></script>
   <script src="./static/js/script.js"></script>
 
 
