--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="images/title-img.png">
   <script defer src="./static/js/all.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <link rel="stylesheet" href="./static/css/bootstrap.css">
+  <link rel="stylesheet" href="./static/css/bootstrap.min.css">
   <link rel="stylesheet" href="./static/css/style.css">
   <title>PhotoX</title>
 </head>
@@ -498,7 +498,8 @@
 
   <script src="./static/js/jquery-3.3.1.js"></script>
   <script src="./static/js/popper.min.js"></script>
-  <script src="./static/js/bootstrap.bundle.js"></script>
+  <!-- <script src="./static/js/bootstrap.bundle.js"></script> -->
+  <script src="./static/js/bootstrap.min.js"></script>
   <script src="./static/js/jquery.easing.min.js"></script>
   <script src="./static/js/script.js"></script>
 
